Amarok ChangeLog
================
(C) 2002-2013 the Amarok authors.


VERSION 2.8
  CHANGES:
   * Amarok now depends on Qt 4.8.3.
   * Amarok now uses FindFFMpeg.cmake from kdelibs

  BUGFIXES:
   * Prevent hitting an assertion failure if just removed track from the Local Collection
     is edited. (BR 322474)
   * Fixed a regression introduced in 2.8 Beta where tracks in the Local Collection were
     sometimes forgotten and then found again. (BR 322603)
   * Fixed invalid SQL queries when you have files or folders with an apostrophe in
     your collection. (BR 322415)
   * Fixed organizing/copying/moving tracks to Local Collection on Windows. (BR 279560,
     BR 302251)
   * Various usability improvements for the applet toolbar. (BR 197948)
   * Removed broken Apply button in applets' settings dialog. (BR 322015)
   * Fix incorrect colors in Context View toolbar when switching themes. (BR 301305)
   * Many fixes for various bugs with switching desktop color themes at runtime,
     including OSD, spectrum analyzer, collection browser.
   * Avoid updating the MPRIS2 Metadata between tracks. (BR 321602)


VERSION 2.8-Beta 1
  FEATURES:
   * Ctrl+C copies the currently playing artist & title to the clipboard. (BR 228872)
     Patch by fleissig fleissig <fleissig@yandex.ru>.
   * Volume fade-out is now also available for pause.
   * The Files browser now has a Refresh button. (BR 213666)
   * The active playlist item is animated with a soft glow effect.
   * Added an audio analyzer visualization applet.
   * Added a function for resetting the GUI layout back to default state. (BR 300753)
   * Pressing enter when searching collections now adds found tracks to the playlist and
     clears the search bar, this is a very convenient way to populate your playlist.
   * Allow to transcode only certain (different format, playability) tracks when
     transferring them to a collection; patch by Anmol Ahuja. (BR 312407)
   * On-Screen-Display fades in/out smoothly.